crates/oxc_react_compiler/tests/snapshots/mutation-during-jsx-construction.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/mutation-during-jsx-construction.js
---
import { c as _c } from "react/compiler-runtime";
import { identity, mutate, mutateAndReturnNewValue } from "shared-runtime";
function Component(props) {
	const $ = _c(2);
	let element;
	if ($[0] !== props.value) {
		const key = {};
		element = <div key={mutateAndReturnNewValue(key)}>{props.value}</div>;
		mutate(key);
		$[0] = props.value;
		$[1] = element;
	} else {
		element = $[1];
	}
	return element;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 42 }]
};
