crates/oxc_react_compiler/tests/snapshots/nested-function-discovery-for-init.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/nested-function-discovery-for-init.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"annotation"
for (var useFoo = function useFoo() {
	"use memo";
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [
			1,
			2,
			3
		];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}; false;) {}
